force-app/main/default/objects/Staffing_Request__c/Staffing_Request__c.object-meta.xml
<CustomObject>
    <label>Staffing Request</label>
    <pluralLabel>Staffing Requests</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Staffing Request Number</label>
        <displayFormat>SR-{0000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>A single shift/staff demand request submitted by a client through the portal. Master-detail to Facility__c so read access follows the client Account. Status values are the client-safe lifecycle stages exposed in the portal: Submitted, Being Worked, Broadcasted, Filled, Unable to Fill, Cancelled.</description>
</CustomObject>