force-app/main/default/objects/Staffing_Request__c/fields/Assigned_Contact__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Contact__c</fullName>
    <label>Assigned Contact</label>
    <type>Text</type>
    <length>120</length>
    <description>Name of the individual assigned to complete this shift once filled. Set by internal staff today (or a future Bullhorn sync); external workers aren't Contact records in this org, so this is a plain text field rather than a lookup.</description>
</CustomField>