force-app/main/default/objects/Staffing_Request__c/fields/Broadcasted_Date__c.field-meta.xml
<CustomField>
    <fullName>Broadcasted_Date__c</fullName>
    <label>Broadcasted Date</label>
    <type>DateTime</type>
</CustomField>