force-app/main/default/objects/Staffing_Request__c/fields/Cancellation_Requested__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Requested__c</fullName>
    <label>Cancellation Requested</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Set true when the client raises a cancellation via the Support/Query screen, pending allocator confirmation.</description>
</CustomField>