force-app/main/default/objects/Staffing_Request__c/fields/Cancelled_By__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_By__c</fullName>
    <label>Cancelled By</label>
    <type>Text</type>
    <length>120</length>
    <description>Name of the person who requested this shift be cancelled, captured when Cancellation_Requested__c is flagged. Portal read-only - set only by SupportRequestService.flagCancellationRequested, the same way Cancellation_Requested__c itself is set.</description>
</CustomField>