force-app/main/default/objects/Staffing_Request__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <label>End Time</label>
    <type>Time</type>
    <required>true</required>
</CustomField>