force-app/main/default/objects/Staffing_Request__c/fields/External_Demand_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Demand_Id__c</fullName>
    <label>External Demand Id</label>
    <type>Text</type>
    <length>60</length>
    <externalId>true</externalId>
    <description>Identifier of the corresponding demand record in Bullhorn / Classic Scheduler once the request has been synced by the Workforce Management integration.</description>
</CustomField>