force-app/main/default/objects/Staffing_Request__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <label>Facility</label>
    <type>MasterDetail</type>
    <referenceTo>Facility__c</referenceTo>
    <relationshipName>Staffing_Requests</relationshipName>
    <relationshipLabel>Staffing Requests</relationshipLabel>
    <required>true</required>
</CustomField>