force-app/main/default/objects/Staffing_Request__c/fields/Requested_By_Contact__c.field-meta.xml
<CustomField>
    <fullName>Requested_By_Contact__c</fullName>
    <label>Requested By</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Staffing_Requests</relationshipName>
    <relationshipLabel>Staffing Requests</relationshipLabel>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>