force-app/main/default/objects/Staffing_Request__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clinical Nurse</fullName>
            </value>
            <value>
                <fullName>Registered Nurse</fullName>
            </value>
            <value>
                <fullName>Registered Midwife</fullName>
            </value>
            <value>
                <fullName>Enrolled Nurse</fullName>
            </value>
            <value>
                <fullName>Nursing Assistant (AIN)</fullName>
            </value>
            <value>
                <fullName>Personal Care Assistant</fullName>
            </value>
            <value>
                <fullName>Kitchen Hand</fullName>
            </value>
            <value>
                <fullName>Pantry</fullName>
            </value>
            <value>
                <fullName>Food Services Assistant</fullName>
            </value>
            <value>
                <fullName>Cleaner</fullName>
            </value>
            <value>
                <fullName>Laundry</fullName>
            </value>
            <value>
                <fullName>Assistant Cook</fullName>
            </value>
            <value>
                <fullName>Cook</fullName>
            </value>
            <value>
                <fullName>Chef</fullName>
            </value>
            <value>
                <fullName>Head Chef Supervisor</fullName>
            </value>
            <value>
                <fullName>Allied Health</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>