force-app/main/default/objects/Staffing_Request__c/fields/Specialty__c.field-meta.xml
<CustomField>
    <fullName>Specialty__c</fullName>
    <label>Specialty</label>
    <type>Text</type>
    <length>120</length>
    <description>Free-text specialty/skill qualifier, e.g. ICU, Palliative Care, Dementia Care.</description>
</CustomField>