force-app/main/default/objects/Staffing_Request__c/fields/Ward__c.field-meta.xml
<CustomField>
    <fullName>Ward__c</fullName>
    <label>Ward</label>
    <type>Lookup</type>
    <referenceTo>Ward__c</referenceTo>
    <relationshipName>Staffing_Requests</relationshipName>
    <relationshipLabel>Staffing Requests</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional sub-location within the selected Facility. Not every facility has wards defined, so this is left optional rather than required.</description>
</CustomField>