force-app/main/default/objects/Staffing_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <label>All Staffing Requests</label>
    <filterScope>Everything</filterScope>
    <columns>NAME</columns>
    <columns>Facility__c</columns>
    <columns>Role__c</columns>
    <columns>Shift_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
</ListView>